[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160, 352 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 160, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 352 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.101961, 0.188235, 0.184314, 1 )

[node name="gamearea" type="ColorRect" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -264.0
margin_top = -240.0
margin_right = 56.0
margin_bottom = 464.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="QueueRect" type="ColorRect" parent="Background"]
margin_left = 480.0
margin_top = 320.0
margin_right = 640.0
margin_bottom = 608.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="GameArea" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea"]
position = Vector2( 256, 672 )
shape = SubResource( 1 )

[node name="Floor" type="Area2D" parent="."]
visible = false
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 256, 1040 )
shape = SubResource( 2 )

[node name="Walls" type="Area2D" parent="."]
visible = false
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2( 80, 672 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2( 432, 672 )
shape = SubResource( 3 )

[node name="PieceTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="SpawnPoint" type="Position2D" parent="."]
position = Vector2( 240, 336 )
__meta__ = {
"_gizmo_extents_": 22.4
}

[node name="QueueSpawnPoint" type="Position2D" parent="."]
position = Vector2( 496, 352 )
__meta__ = {
"_gizmo_extents_": 22.4
}

[node name="UI" type="Control" parent="."]
pause_mode = 2
process_priority = 1
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="StartGameButton" type="Button" parent="UI"]
margin_left = 480.0
margin_top = 992.0
margin_right = 492.0
margin_bottom = 1012.0
text = "Start game"

[node name="ScoreLabel" type="Label" parent="UI"]
margin_left = 224.0
margin_top = 288.0
margin_right = 264.0
margin_bottom = 302.0
text = "0"

[connection signal="body_entered" from="Floor" to="." method="_on_Floor_body_entered"]
[connection signal="body_entered" from="Walls" to="." method="_on_Walls_body_entered"]
[connection signal="timeout" from="PieceTimer" to="." method="test_and_move_down"]
[connection signal="pressed" from="UI/StartGameButton" to="." method="start_game"]
